# c_http_server

./: CMakeLists.txt  forbid_file.sh  kill_server.sh  readme.md  server_build.sh
files_to_serve/: a_forbidden_file.html  index.html
files_to_serve/a_nested_folder/: nested_html.html
src/: http_parser.c  http_server.h  main.c  socket.c  threading.c
